--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,8 @@
     "com.unity.modules.physics": "1.0.0",
     "com.unity.timeline": "1.6.2",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.7.6"
+    "com.unity.visualscripting": "1.7.6",
+    "com.unity.modules.imageconversion": "1.0.0",
+    "com.unity.modules.screencapture": "1.0.0"
   }
 }
